--- a/src/app/features/home/shared/task-dialog/task-dialog.component.html
+++ b/src/app/features/home/shared/task-dialog/task-dialog.component.html
@@ -2,9 +2,8 @@
     <h2 class="form-title">Criar Tarefa</h2>
 
     <form [formGroup]="taskForm" class="form-container">
-        <!-- Coluna Esquerda: Título e Descrição -->
         <div class="left-column">
-            <mat-form-field class="full-width">
+            <mat-form-field class="full-width custom-form-field">
                 <mat-label>Título</mat-label>
                 <input matInput formControlName="title" placeholder="Insira o título da tarefa">
             </mat-form-field>
@@ -14,8 +13,12 @@
                 <textarea matInput formControlName="description" placeholder="Descreva a tarefa" rows="5"></textarea>
             </mat-form-field>
 
-        </div>
+            <mat-tab-group *ngIf="data.id">
+                <!--- mat-tab label="Mensagems"> Mensagem </!--->
 
+                <mat-tab label="Histórico"><app-task-history [taskId]="data.id"></app-task-history> </mat-tab>
+            </mat-tab-group>
+        </div>
         <div class="right-column">
             <mat-form-field class="full-width">
                 <mat-label>Tipo</mat-label>
