removido a visualização do assignado (ainda nao da para trabalhar em equipe

--- a/src/app/features/home/kanban-board/kanban-card/kanban-card.component.html
+++ b/src/app/features/home/kanban-board/kanban-card/kanban-card.component.html
@@ -7,8 +7,8 @@
                 <app-task-chip-priority [priority]="task.priority"></app-task-chip-priority>
             </mat-card-subtitle>
         </mat-card-header>
-        <mat-card-content>
+        <!--mat-card-content>
             <small>Responsável: {{ task.assign?.name || 'Não Assignado' }}</small>
-        </mat-card-content>
+        </mat-card-content --->
     </mat-card>
 </div>
